update install notes

--- a/openatlas/db_example.conf
+++ b/openatlas/db_example.conf
@@ -1,13 +1,13 @@
 [production]
-database_name = openatlas_python
-database_user = openatlas_master
+database_name = openatlas
+database_user = openatlas
 database_host = localhost
 database_port = 5432
 database_pass = CHANGEME
 
 [testing]
-database_name = openatlas_python_test
-database_user = openatlas_master
+database_name = openatlas_test
+database_user = openatlas
 database_host = localhost
 database_port = 5432
 database_pass = CHANGEME
