--- a/install/example_apache.conf
+++ b/install/example_apache.conf
@@ -1,6 +1,7 @@
 <VirtualHost *:80>
         ServerName      openatlas.local
         WSGIScriptAlias /   /var/www/net/openatlas/openatlas.wsgi
+        WSGIApplicationGroup %{GLOBAL}
         <Directory          /var/www/net/openatlas/openatlas>
                 Require all granted
         </Directory>
