--- a/openatlas/static/manifest.json
+++ b/openatlas/static/manifest.json
@@ -1,12 +1,10 @@
 {
-	"name": "OpenAtlas",
-	"icons": [
-		{
-			"src": "\/android-chrome-192x192.png",
-			"sizes": "192x192",
-			"type": "image\/png"
-		}
-	],
-	"theme_color": "#ffffff",
-	"display": "standalone"
+  "name": "OpenAtlas",
+  "short_name": "OpenAtlas",
+  "start_url": ".",
+  "description": "Open-source application for archeological, historical and geospatial data.",
+  "icons": [{"src": "\/android-chrome-192x192.png", "sizes": "192x192", "type": "image\/png"}],
+  "theme_color": "#ffffff",
+  "display": "standalone",
+  "related_applications": [{"platform": "Web"}]
 }
