Update installation and upgrade notes

--- a/install/example_apache.conf
+++ b/install/example_apache.conf
@@ -1,5 +1,8 @@
 <VirtualHost *:80>
         ServerName      openatlas.local
+
+        WSGIDaemonProcess openatlas processes=2 threads=15 display-name=%{GROUP}
+        WSGIProcessGroup openatlas
         WSGIScriptAlias /   /var/www/net/openatlas/openatlas.wsgi
         WSGIApplicationGroup %{GLOBAL}
 
