--- a/openatlas/static/manifest.json
+++ b/openatlas/static/manifest.json
@@ -5,6 +5,5 @@
   "description": "Open-source application for archeological, historical and geospatial data.",
   "icons": [{"src": "\/android-chrome-192x192.png", "sizes": "192x192", "type": "image\/png"}],
   "theme_color": "#ffffff",
-  "display": "standalone",
-  "related_applications": [{"platform": "Web"}]
+  "display": "standalone"
 }
