--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ openatlas/export/sql/*
 # ide
 .idea
 .ftpconfig
+
+# npm libs
+/openatlas/static/node_modules
+/openatlas/static/openatlas.egg-info/
+/openatlas/static/vendor/popper.js-1.16.0/
+/openatlas/static/package-lock.json
