--- a/install/windows/requirements_test.txt
+++ b/install/windows/requirements_test.txt
@@ -1,9 +1,4 @@
-bcrypt==3.1.7
-Flask==1.1.1
-Jinja2==2.10.1
-mypy==0.740
-mypy-extensions==0.4.3
-numpy==1.16.4
-pandas==0.24.2
-psycopg2==2.7.5
-python-dateutil==2.8.0
+-r requirements.txt
+
+nose==1.3.7
+nose-cover3==0.1.0
