install notes and gitignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,5 @@ openatlas/export/sql/*
 /openatlas/static/node_modules
 /openatlas/static/openatlas.egg-info/
 /openatlas/static/vendor/popper.js-1.16.0/
+/openatlas/static/package.json
 /openatlas/static/package-lock.json
