--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -1,5 +1,8 @@
 bcrypt==3.1.7
 Flask==1.1.1
+Flask-Babel==0.12.2
+Flask-WTF==0.14.2
+Flask-Login==0.4.1
 Jinja2==2.10.1
 mypy==0.740
 mypy-extensions==0.4.3
@@ -7,3 +10,5 @@ numpy==1.16.4
 pandas==0.24.2
 psycopg2==2.7.5
 python-dateutil==2.8.0
+calmjs==3.4.1
+fuzzywuzzy==0.17.0
