--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ instance/*
 __pycache__/*
 .mypy_cache/*
 .bash_history
+.cache/*
 
 # compiled files
 *.pyc
-/openatlas/static/.eggs/
 
 # unit tests
 openatlas/tests/.coverage
@@ -27,9 +27,12 @@ openatlas/export/sql/*
 .ftpconfig
 
 # npm libs
-/openatlas/static/node_modules
-/openatlas/static/openatlas.egg-info/
-/openatlas/static/package.json
-/openatlas/static/package-lock.json
+openatlas/static/.eggs/
+openatlas/static/node_modules
+openatlas/static/openatlas.egg-info/
+openatlas/static/package.json
+openatlas/static/package-lock.json
 
-
+# Docker files
+.npm/*
+.local/*
