Manual: footer, ext links in new tab, license

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 openatlas/static/vendor/* linguist-vendored
 install/* linguist-documentation=true
+sphinx/* linguist-documentation=true
+openatlas/static/manual/* linguist-documentation=true
