--- a/openatlas/api/v02/swagger/content.yml
+++ b/openatlas/api/v02/swagger/content.yml
@@ -1,28 +1,22 @@
 Content endpoint
 ---
+tags:
+  - Content
+summary: Retrieves the content of an OpenAtlas instance
 parameters:
-  - in: query
-    name: download
-    description: triggers a file download of the result.
-    type: boolean
-  - in: query
-    name: lang
-    description: select language for content
-    type: string
-    enum:
-      - en
-      - de
+  - $ref: '#/components/parameters/langParam'
+  - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
     description: list of OA content
     content:
-        application/ld+json:
-          schema:
-            contact:
-              type: string
-            intro:
-              type: string
-            legal:
-              type: string
+      application/ld+json:
+        schema:
+          contact:
+            type: string
+          intro:
+            type: string
+          legal:
+            type: string
   '404':
     description: not found
