--- a/openatlas/api/v02/swagger/entity.yml
+++ b/openatlas/api/v02/swagger/entity.yml
@@ -1,88 +1,76 @@
 Entity endpoint
 ---
+tags:
+  - Entities
+summary: Retrieves a Geojson representations of an entity
 parameters:
-    - in: path
-      name: id
-      description: the entity ID
-      required: true
-      type: number
-    - in: query
-      name: show
-      description: select which key should be shown e.g. when, types, relations, names, links, geometry, depictions, none
-      type: string
-      enum:
-        - when
-        - types
-        - relations
-        - names
-        - links
-        - geometry
-        - depictions
-        - none
-    - in: query
-      name: download
-      description: triggers a file download of the result.
-      type: boolean
+  - name: id
+    in: path
+    description: Specific entity ID
+    required: true
+    type: number
+  - $ref: '#/components/parameters/showParam'
+  - $ref: '#/components/parameters/downloadParam'
 responses:
-    '200':
-      description: a geojson representation of the specified entity
-      content:
-          application/ld+json:
-            schema:
-              properties:
+  '200':
+    description: a geojson representation of the specified entity
+    content:
+      application/ld+json:
+        schema:
+          properties:
+            type:
+              type: string
+              enum:
+                - FeatureCollection
+            features:
+              type: array
+              items:
                 type:
                   type: string
                   enum:
-                    - FeatureCollection
-                features:
-                  type: array
-                  items:
-                    type:
-                      type: string
-                      enum:
-                        - Feature
-                    geometry:
-                      type:
-                        type: string
-                        enum:
-                          - Point
-                          - MultiPoint
-                          - LineString
-                          - MultiLineString
-                          - Polygon
-                          - MultiPolygon
-                          - GeometryCollection
-                    properties:
-                      type: object
-                      nullable: true
-                    id:
-                      oneOf:
-                        - type: string
-                        - type: integer
-                links:
-                  type: array
-                  items:
-                    href:
-                      type: string
-                    rel:
-                      type: string
-                      example: prev
-                    type:
-                      type: string
-                      example: application/geo+json
-                    hreflang:
-                      type: string
-                      example: en
-                timeStamp:
+                    - Feature
+                geometry:
+                  type:
+                    type: string
+                    enum:
+                      - Point
+                      - MultiPoint
+                      - LineString
+                      - MultiLineString
+                      - Polygon
+                      - MultiPolygon
+                      - GeometryCollection
+                properties:
+                  type: object
+                  nullable: true
+                id:
+                  oneOf:
+                    - type: string
+                    - type: integer
+            links:
+              type: array
+              items:
+                href:
                   type: string
-                  format: dateTime
-                numberMatched:
-                  type: integer
-                  minimum: 0
-                numberReturned:
-                  type: integer
-                  minimum: 0
-    '404':
-      description: not found
+                rel:
+                  type: string
+                  example: prev
+                type:
+                  type: string
+                  example: application/geo+json
+                hreflang:
+                  type: string
+                  example: en
+            timeStamp:
+              type: string
+              format: dateTime
+            numberMatched:
+              type: integer
+              minimum: 0
+            numberReturned:
+              type: integer
+              minimum: 0
+  '404':
+    description: not found
 
 
