--- a/openatlas/api/v02/swagger/code.yml
+++ b/openatlas/api/v02/swagger/code.yml
@@ -4,8 +4,8 @@ tags:
   - Entities
 summary: Retrieves a list of Geojson representations covert by a menu item
 parameters:
-  - name: code
-    in: path
+  - in: path
+    name: item
     description: A OA menu item e.g. actor, event, place, reference, source, object
     required: true
     schema:
@@ -32,58 +32,6 @@ responses:
     content:
       application/ld+json:
         schema:
-          properties:
-            type:
-              type: string
-              enum:
-                - FeatureCollection
-            features:
-              type: array
-              items:
-                type:
-                  type: string
-                  enum:
-                    - Feature
-                geometry:
-                  type:
-                    type: string
-                    enum:
-                      - Point
-                      - MultiPoint
-                      - LineString
-                      - MultiLineString
-                      - Polygon
-                      - MultiPolygon
-                      - GeometryCollection
-                properties:
-                  type: object
-                  nullable: true
-                id:
-                  oneOf:
-                    - type: string
-                    - type: integer
-            links:
-              type: array
-              items:
-                href:
-                  type: string
-                rel:
-                  type: string
-                  example: prev
-                type:
-                  type: string
-                  example: application/geo+json
-                hreflang:
-                  type: string
-                  example: en
-            timeStamp:
-              type: string
-              format: dateTime
-            numberMatched:
-              type: integer
-              minimum: 0
-            numberReturned:
-              type: integer
-              minimum: 0
+          $ref: '#/components/schemas/OutputModel'
   '404':
     description: not found
