--- a/openatlas/api/v02/swagger/query.yml
+++ b/openatlas/api/v02/swagger/query.yml
@@ -4,30 +4,28 @@ tags:
   - Entities
 summary: Retrieves a list of Geojson representations by entity id, CIDOC CRM code or menu item
 parameters:
-  - name: entities
-    in: query
+  - in: query
+    name: entities
     description: Specific entity ID
     schema:
       type: number
-  - name: classes
-    in: query
+  - in: query
+    name: classes
     description: Need to be a Entity class of the CIDOC CRM (e.g. E21, E18, E33)
     schema:
       type: string
-  - name: items
-    in: query
+  - in: query
+    name: items
     description: A OA menu item e.g. actor, event, place, reference, source, object
     schema:
       type: string
-      schema:
-        type: string
-        enum:
-          - actor
-          - event
-          - place
-          - reference
-          - source
-          - object
+      enum:
+        - actor
+        - event
+        - place
+        - reference
+        - source
+        - object
   - $ref: '#/components/parameters/limitParam'
   - $ref: '#/components/parameters/columnParam'
   - $ref: '#/components/parameters/sortParam'
@@ -43,58 +41,6 @@ responses:
     content:
       application/ld+json:
         schema:
-          properties:
-            type:
-              type: string
-              enum:
-                - FeatureCollection
-            features:
-              type: array
-              items:
-                type:
-                  type: string
-                  enum:
-                    - Feature
-                geometry:
-                  type:
-                    type: string
-                    enum:
-                      - Point
-                      - MultiPoint
-                      - LineString
-                      - MultiLineString
-                      - Polygon
-                      - MultiPolygon
-                      - GeometryCollection
-                properties:
-                  type: object
-                  nullable: true
-                id:
-                  oneOf:
-                    - type: string
-                    - type: integer
-            links:
-              type: array
-              items:
-                href:
-                  type: string
-                rel:
-                  type: string
-                  example: prev
-                type:
-                  type: string
-                  example: application/geo+json
-                hreflang:
-                  type: string
-                  example: en
-            timeStamp:
-              type: string
-              format: dateTime
-            numberMatched:
-              type: integer
-              minimum: 0
-            numberReturned:
-              type: integer
-              minimum: 0
+          $ref: '#/components/schemas/OutputModel'
   '404':
     description: not found
