--- a/openatlas/api/v02/swagger/class.yml
+++ b/openatlas/api/v02/swagger/class.yml
@@ -2,11 +2,11 @@ Classes endpoint
 ---
 tags:
   - Entities
-summary: Retrieves a list of Geojson representations for a specific CIDOC CRM code
+summary: Retrieves a list of Geojson representations for a specific CIDOC CRM class code
 parameters:
   - in: path
     name: class_code
-    description: Need to be a Entity class of the CIDOC CRM (e.g. E21, E18, E33)
+    description: Need to be a entity class code of the CIDOC CRM (e.g. E21, E18, E33). For further information visit https://redmine.craws.net/projects/uni/wiki/OpenAtlas_and_CIDOC_CRM_class_mapping
     required: true
     schema:
       type: string
@@ -21,10 +21,10 @@ parameters:
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: a geojson representation of the specified entity
+    description: A dictionary with a result dictionary and pagination information
     content:
       application/ld+json:
         schema:
           $ref: '#/components/schemas/OutputModel'
   '404':
-    description: not found
+    description: Something went wrong. Please consult the error message.
