--- a/openatlas/api/v02/swagger/code.yml
+++ b/openatlas/api/v02/swagger/code.yml
@@ -5,8 +5,8 @@ tags:
 summary: Retrieves a list of Geojson representations covert by a menu item
 parameters:
   - in: path
-    name: item
-    description: A OA menu item e.g. actor, event, place, reference, source, object
+    name: code
+    description: Need to be an OpenAtlas menu items
     required: true
     schema:
       type: string
@@ -28,10 +28,10 @@ parameters:
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: a geojson representation of the specified entity
+    description: A dictionary with a result dictionary and pagination information
     content:
       application/ld+json:
         schema:
           $ref: '#/components/schemas/OutputModel'
   '404':
-    description: not found
+    description: Something went wrong. Please consult the error message.
