--- a/openatlas/api/v02/swagger/content.yml
+++ b/openatlas/api/v02/swagger/content.yml
@@ -2,16 +2,16 @@ Content endpoint
 ---
 tags:
   - Content
-summary: Retrieves the content of an OpenAtlas instance
+summary: Retrieves the content (Intro, Legal Notice and Contact) of an OpenAtlas instance
 parameters:
   - $ref: '#/components/parameters/langParam'
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: List of OA content
+    description: List of OpenAtlas content (Intro, Legal Notice and Contact)
     content:
       application/ld+json:
         schema:
           $ref: '#/components/schemas/ContentModel'
   '404':
-    description: not found
+    description: Something went wrong. Please consult the error message.
