--- a/openatlas/api/v02/swagger/entity.yml
+++ b/openatlas/api/v02/swagger/entity.yml
@@ -2,7 +2,7 @@ Entity endpoint
 ---
 tags:
   - Entities
-summary: Retrieves a Geojson representations of an entity
+summary: Retrieves a geojson representations of an entity
 parameters:
   - in: path
     name: id_
@@ -14,12 +14,12 @@ parameters:
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: a geojson representation of the specified entity
+    description: A geojson representation of the specified entity
     content:
       application/ld+json:
         schema:
           $ref: '#/components/schemas/GeoJsonModel'
   '404':
-    description: not found
+    description: Something went wrong. Please consult the error message.
 
 
