--- a/openatlas/api/v02/swagger/latest.yml
+++ b/openatlas/api/v02/swagger/latest.yml
@@ -2,11 +2,11 @@ Latest endpoint
 ---
 tags:
   - Entities
-summary: Retrieves a list of Geojson representations
+summary: Retrieves a list of latest entries in the OpenAtlas database
 parameters:
   - in: path
     name: latest
-    description: The amount of last enterd entities to be retrieved
+    description: The amount of last enterd entities to be retrieved (Valid numbers between 1 and 100)
     required: true
     schema:
       type: number
@@ -14,10 +14,10 @@ parameters:
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: a geojson representation of the specified entity
+    description: A dictionary with a result dictionary and pagination information (null)
     content:
       application/ld+json:
         schema:
           $ref: '#/components/schemas/LatestModel'
   '404':
-    description: not found
+    description: Something went wrong. Please consult the error message.
