--- a/openatlas/api/v02/swagger/nodes.yml
+++ b/openatlas/api/v02/swagger/nodes.yml
@@ -6,7 +6,7 @@ summary: Retrieves a list of entities linked to that node
 parameters:
   - in: path
     name: id_
-    description: The ID of an entity, which has to be a Node
+    description: The ID of an entity, which has to be a node
     required: true
     schema:
       type: number
@@ -14,10 +14,10 @@ parameters:
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: a geojson representation of the specified entity
+    description: A list of node entities linked to the given node
     content:
       application/ld+json:
         schema:
           $ref: '#/components/schemas/NodeOverviewModel'
   '404':
-    description: not found
+    description: Something went wrong. Please consult the error message.
