--- a/openatlas/api/v02/swagger/query.yml
+++ b/openatlas/api/v02/swagger/query.yml
@@ -11,12 +11,12 @@ parameters:
       type: number
   - in: query
     name: classes
-    description: Need to be a Entity class of the CIDOC CRM (e.g. E21, E18, E33)
+    description: Need to be a entity class code of the CIDOC CRM (e.g. E21, E18, E33). For further information visit https://redmine.craws.net/projects/uni/wiki/OpenAtlas_and_CIDOC_CRM_class_mapping
     schema:
       type: string
   - in: query
-    name: items
-    description: A OA menu item e.g. actor, event, place, reference, source, object
+    name: codes
+    description: Need to be an OpenAtlas menu items
     schema:
       type: string
       enum:
@@ -37,10 +37,10 @@ parameters:
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: a geojson representation of the specified entity
+    description: A dictionary with a result dictionary and pagination information
     content:
       application/ld+json:
         schema:
           $ref: '#/components/schemas/OutputModel'
   '404':
-    description: not found
+    description: Something went wrong. Please consult the error message.
