--- a/openatlas/api/v02/swagger/content.yml
+++ b/openatlas/api/v02/swagger/content.yml
@@ -2,13 +2,13 @@ Content endpoint
 ---
 tags:
   - Content
-summary: Retrieves the content (Intro, Legal Notice and Contact) of an OpenAtlas instance
+description: Retrieves a json of the content (Intro, Legal Notice and Contact) from the OpenAtlas instance. The language can be choosen with the **lang** parameter (en or de).
 parameters:
   - $ref: '#/components/parameters/langParam'
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: List of OpenAtlas content (Intro, Legal Notice and Contact)
+    description: Json of OpenAtlas content (Intro, Legal Notice and Contact)
     content:
       application/ld+json:
         schema:
