--- a/openatlas/api/v02/swagger/latest.yml
+++ b/openatlas/api/v02/swagger/latest.yml
@@ -2,11 +2,11 @@ Latest endpoint
 ---
 tags:
   - Entities
-summary: Retrieves a list of latest entries in the OpenAtlas database
+description: Retrieves a json of latest entries made in the OpenAtlas database. The number **latest** represents the amount of entities retrieved. **latest** can be any number between and including 1 and 100. The pagination information is alway `null`
 parameters:
   - in: path
     name: latest
-    description: The amount of last enterd entities to be retrieved (Valid numbers between 1 and 100)
+    description: The amount of last enterd entities to be retrieved (Valid numbers between and including 1 and 100)
     required: true
     schema:
       type: number
@@ -14,7 +14,7 @@ parameters:
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: A dictionary with a result dictionary and pagination information (null)
+    description: A json with a result list and pagination information (null)
     content:
       application/ld+json:
         schema:
