--- a/openatlas/api/v02/swagger/nodes_all.yml
+++ b/openatlas/api/v02/swagger/nodes_all.yml
@@ -2,7 +2,7 @@ Node endpoint
 ---
 tags:
   - Nodes
-description: Retrieves a json list of all entities directly linked to one specific node.
+description: Retrieves a json list of all entities linked to a specific node. This path also include all sub entities.
 parameters:
   - in: path
     name: id_
