--- a/openatlas/api/v02/swagger/subunit.yml
+++ b/openatlas/api/v02/swagger/subunit.yml
@@ -2,7 +2,7 @@ Node endpoint
 ---
 tags:
   - Nodes
-description: Retrieves a json list of all entities directly linked to one specific node.
+description: Todo
 parameters:
   - in: path
     name: id_
