refactor swagger and yml

--- a/openatlas/api/v02/swagger/class_mapping.yml
+++ b/openatlas/api/v02/swagger/class_mapping.yml
@@ -2,7 +2,7 @@ Class Mapping endpoint
 ---
 tags:
   - Content
-summary: Provides a list of all available system classes, their CIDOC CRM mapping, which view they belong, which icon is used and the englisch name
+description: Provides a list of all available system classes, their CIDOC CRM mapping, which view they belong, which icon is used and the englisch name
 responses:
   '200':
     description: List of all available system classes
