--- a/openatlas/api/v02/swagger/overview_count.yml
+++ b/openatlas/api/v02/swagger/overview_count.yml
@@ -2,7 +2,7 @@ Overview Count endpoint
 ---
 tags:
   - Content
-summary: Provides a count of all types
+description: Provides a count of all types
 responses:
   '200':
     description: Count of all entities
