--- a/openatlas/api/v02/common/swagger/class.yml
+++ b/openatlas/api/v02/common/swagger/class.yml
@@ -19,6 +19,7 @@ parameters:
   - $ref: '#/components/parameters/showParam'
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
+  - $ref: '#/components/parameters/formatParam'
 responses:
   '200':
     description: A json with a list of results and pagination information
