--- a/openatlas/api/v02/common/swagger/code.yml
+++ b/openatlas/api/v02/common/swagger/code.yml
@@ -1,15 +1,22 @@
-Type Entities Endpoint
+Code endpoint
 ---
 tags:
   - Entities
-description: Retrieves a json with a list of entities based on their OpenAtlas type. A possible *id* can be obtained by the *type_tree* or *node_overview* endpoint. The result can also be filtered, ordered and manipulated through different parameters. By default results are orderd alphabetically and 20 entities are shown.
+description: Retrieves a json with a list of entities based on their OpenAtlas categorie. Available categories are **actor**, **event**, **place**, **source**, **reference**, **object**. The result can also be filtered, ordered and manipulated through different parameters. By default results are orderd alphabetically and 20 entities are shown.
 parameters:
   - in: path
-    name: id_
-    description: Has to be a OpenAtlas type
+    name: code
+    description: Need to be an OpenAtlas menu item
     required: true
     schema:
-      type: number
+      type: string
+      enum:
+        - actor
+        - event
+        - place
+        - reference
+        - source
+        - object
   - $ref: '#/components/parameters/limitParam'
   - $ref: '#/components/parameters/columnParam'
   - $ref: '#/components/parameters/sortParam'
@@ -19,6 +26,7 @@ parameters:
   - $ref: '#/components/parameters/showParam'
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
+  - $ref: '#/components/parameters/formatParam'
 responses:
   '200':
     description: A dictionary with a result dictionary and pagination information
