--- a/openatlas/api/v02/common/swagger/entity.yml
+++ b/openatlas/api/v02/common/swagger/entity.yml
@@ -13,13 +13,14 @@ parameters:
   - $ref: '#/components/parameters/showParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/exportParam'
+  - $ref: '#/components/parameters/formatParam'
 responses:
   '200':
     description: A geojson representation of the specified entity
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/GeoJsonModel'
+          $ref: '#/components/schemas/LinkedPlaceModel'
   '404':
     description: Something went wrong. Please consult the error message.
 
