--- a/openatlas/api/v02/common/swagger/type_entities_all.yml
+++ b/openatlas/api/v02/common/swagger/type_entities_all.yml
@@ -1,22 +1,15 @@
-Code endpoint
+Type Entities All Endpoint
 ---
 tags:
   - Entities
-description: Retrieves a json with a list of entities based on their OpenAtlas categorie. Available categories are **actor**, **event**, **place**, **source**, **reference**, **object**. The result can also be filtered, ordered and manipulated through different parameters. By default results are orderd alphabetically and 20 entities are shown.
+description: Retrieves a json with a list of entities based on their OpenAtlas type. This endpoint also includes all entities, which are connected to an subtype. A possible *id* can be obtained by the *type_tree* or *node_overview* endpoint. The result can also be filtered, ordered and manipulated through different parameters. By default results are orderd alphabetically and 20 entities are shown.
 parameters:
   - in: path
-    name: code
-    description: Need to be an OpenAtlas menu item
+    name: id_
+    description: Has to be a OpenAtlas type
     required: true
     schema:
-      type: string
-      enum:
-        - actor
-        - event
-        - place
-        - reference
-        - source
-        - object
+      type: number
   - $ref: '#/components/parameters/limitParam'
   - $ref: '#/components/parameters/columnParam'
   - $ref: '#/components/parameters/sortParam'
@@ -26,6 +19,7 @@ parameters:
   - $ref: '#/components/parameters/showParam'
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
+  - $ref: '#/components/parameters/formatParam'
 responses:
   '200':
     description: A dictionary with a result dictionary and pagination information
