Refactoring with Pylint

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,3 @@
 [MASTER]
-disable=C0111 # missing-docstring
+disable=C0111  # missing-docstring
+good-names=i,j,k,ex,Run,_,e,js,bc,id,rv,ip  # default is i,j,k,ex,Run,_
