--- a/openatlas/api/v02/endpoints/swagger/cidoc_class.yml
+++ b/openatlas/api/v02/endpoints/swagger/cidoc_class.yml
@@ -21,6 +21,7 @@ parameters:
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/formatParam'
+  - $ref: '#/components/parameters/pageParam'
 responses:
   '200':
     description: A json with a list of results and pagination information
