--- a/openatlas/api/v02/endpoints/swagger/linked_entities.yml
+++ b/openatlas/api/v02/endpoints/swagger/linked_entities.yml
@@ -20,6 +20,7 @@ parameters:
   - $ref: '#/components/parameters/typeParam'
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
+  - $ref: '#/components/parameters/pageParam'
 responses:
   '200':
     description: A dictionary with a result dictionary and pagination information
