--- a/openatlas/api/v03/endpoints/swagger/type_entities.yml
+++ b/openatlas/api/v03/endpoints/swagger/type_entities.yml
@@ -21,6 +21,7 @@ parameters:
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/formatParam'
+  - $ref: '#/components/parameters/pageParam'
 responses:
   '200':
     description: A dictionary with a result dictionary and pagination information
