Refactor with Pylint

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,11 @@
 [MASTER]
+ignore=openatlas.wsgi
 min-public-methods=0
 disable=C0111  # missing-docstring
 good-names=i,j,k,ex,Run,_,e,js,bc,id,rv,ip  # default is i,j,k,ex,Run,_
 
 [FORMAT]
 max-line-length=80
+
+[TYPECHECK]
+ignored-classes=Form
