added export to swagger

--- a/openatlas/api/v03/swagger/system_class.yml
+++ b/openatlas/api/v03/swagger/system_class.yml
@@ -46,6 +46,7 @@ parameters:
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/formatParam'
+  - $ref: '#/components/parameters/exportParam'
   - $ref: '#/components/parameters/pageParam'
 responses:
   '200':
