--- a/openatlas/api/v03/swagger/cidoc_class.yml
+++ b/openatlas/api/v03/swagger/cidoc_class.yml
@@ -5,7 +5,7 @@ tags:
 description: Retrieves a json with a list of entities based on their CIDOC CRM class code. The json contains a **result** and **pagination** key. All in OpenAtlas available codes can be found under `https://redmine.craws.net/projects/uni/wiki/OpenAtlas_and_CIDOC_CRM_class_mapping`. The result can also be filtered, ordered and manipulated through different parameters. By default results are orderd alphabetically and 20 entities are shown.
 parameters:
   - in: path
-    name: class_code
+    name: cidoc_class
     description: Need to be a valid CIDOC CRM class code (e.g. E21, E18, E33)
     required: true
     schema:
@@ -21,6 +21,7 @@ parameters:
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/formatParam'
+  - $ref: '#/components/parameters/exportParam'
   - $ref: '#/components/parameters/pageParam'
 responses:
   '200':
