--- a/openatlas/api/v03/swagger/entities_linked_to_entity.yml
+++ b/openatlas/api/v03/swagger/entities_linked_to_entity.yml
@@ -20,6 +20,8 @@ parameters:
   - $ref: '#/components/parameters/typeParam'
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
+  - $ref: '#/components/parameters/formatParam'
+  - $ref: '#/components/parameters/exportParam'
   - $ref: '#/components/parameters/pageParam'
 responses:
   '200':
