--- a/openatlas/api/v03/swagger/latest.yml
+++ b/openatlas/api/v03/swagger/latest.yml
@@ -13,6 +13,7 @@ parameters:
   - $ref: '#/components/parameters/showParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/formatParam'
+  - $ref: '#/components/parameters/exportParam'
 responses:
   '200':
     description: A json with a result list and pagination information
