--- a/openatlas/api/v03/swagger/type_entities_all.yml
+++ b/openatlas/api/v03/swagger/type_entities_all.yml
@@ -21,6 +21,7 @@ parameters:
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/formatParam'
+  - $ref: '#/components/parameters/exportParam'
   - $ref: '#/components/parameters/pageParam'
 responses:
   '200':
