--- a/openatlas/api/v03/swagger/system_class.yml
+++ b/openatlas/api/v03/swagger/system_class.yml
@@ -43,6 +43,7 @@ parameters:
   - $ref: '#/components/parameters/firstParam'
   - $ref: '#/components/parameters/lastParam'
   - $ref: '#/components/parameters/showParam'
+  - $ref: '#/components/parameters/relationTypeParam'
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/formatParam'
