--- a/openatlas/api/v03/swagger/view_class.yml
+++ b/openatlas/api/v03/swagger/view_class.yml
@@ -29,6 +29,7 @@ parameters:
   - $ref: '#/components/parameters/firstParam'
   - $ref: '#/components/parameters/lastParam'
   - $ref: '#/components/parameters/showParam'
+  - $ref: '#/components/parameters/relationTypeParam'
   - $ref: '#/components/parameters/typeParam'
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
